Fri Jul  8 21:20:39 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: use USE_ELF instead of __ELF__ because Solaris
	  doesn't define it. USE_ELF is already provided by configure.
	  patched by Naohisa Goto. [ruby-dev:44066] [Bug #4998]

	* addr2line.h: ditto.

	* vm_dump.c: ditto.

Fri Jul  8 16:40:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.rl (convert_encoding): should not modify
	  the argument.

	* ext/json/parser/parser.rl (convert_encoding): no needs to use
	  force_encoding.

Fri Jul  8 15:53:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_bug): get rid of segfault after all threads
	  disposed.

Fri Jul  8 15:01:06 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl.h: include openssl/e_os2.h before checking the
	  defition of OPENSSL_SYS_WIN32.

Fri Jul  8 14:40:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (wunlink): reverted a part of r32426. it was mistakenly
	  mixed.

Fri Jul  8 14:29:47 2011  Narihiro Nakamura  <authornari@gmail.com>

	* configure.in: can't subtract void *.

Fri Jul  8 14:33:26 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): define GC_MARK_STACKFRAME_WORD.
	  fixed build problem of r32438.  the value (30) is temporary value.
	  maybe it's enough by 20~24 according to my observation.

Fri Jul  8 13:47:39 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_unlock_all): folded into
	  rb_threadptr_unlock_all_locking_mutexes.
	* thread.c (rb_threadptr_unlock_all_locking_mutexes) ditto.

Fri Jul  8 13:36:02 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_unlock_all_locking_mutexes): rename to
	  rb_threadptr_unlock_all_locking_mutexes and remove static.
	* vm_core.h: add rb_threadptr_unlock_all_locking_mutexes declaration.
	* thread.c (thread_start_func_2): adjust the above rename.

	* eval.c (ruby_cleanup): call rb_threadptr_unlock_all_locking_mutexes